--- a/src/css/header.css
+++ b/src/css/header.css
@@ -66,6 +66,7 @@ button {
 .page-header {
   padding: 26px 0;
   border-bottom: 1px solid rgba(12, 12, 12, 0.1);
+ 
 }
 
 .page-header-container {
@@ -200,94 +201,253 @@ button {
 
 /**********************************MOBILE MENU**************************************/
 
+@media only screen and (max-width: 767px) {
 
-.mobile-menu{
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 999999999;
-    width: 100%;
-    height: 100%;
+
+
+  .mobile-menu {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 999999999;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(12, 12, 12, 0.92);
+      background-image: linear-gradient(rgba(12, 12, 12, 0.92), rgba(12, 12, 12, 0.92)), url("../img/mobile-menu-bg/mobile-bg.jpg");
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 250ms linear, visibility 250ms linear;
+  
+    }
+  
+    .mobile-menu.is-open {
+      opacity: 1;
+      visibility: visible;
+    }
+  
+    .mobile-menu-container {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      /* max-width: 320px;  */
+      padding: 20px 20px 40px 20px;
+      height: 100%;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  
+  
+    .mobile-menu-close-btn {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      background-color: transparent;
+      line-height: 0;
+      border: none;
+      padding: 0;
+      stroke: #ffffff;
+      width: 34px;
+      height: 34px;
+      cursor: pointer;
+    }
+  
+  
+    .mobile-page-nav-menu {
+      margin-top: auto;
+      margin-bottom: auto;
+    }
+  
+    .mobile-nav-menu {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 24px;
+      /* margin-top: 50px;
+      margin-bottom: 50px; */
+  
+    }
+  
+    .mobile-nav-link {
+      font-family: 'Gilroy', sans-serif;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 1.28571;
+      text-align: center;
+      color: #fbfbfb;
+    }
+  
+    .mobile-socialmedia-list {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      padding-bottom: 40px;
+    }
+  
+    .mobile-socialmedia-list-link {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 10px;
+      fill: #fbfbfb;
+      border: 1px solid rgba(251, 251, 251, 0.1);
+      padding: 8px;
+      width: 34px;
+      height: 34px;
+    }
+
+
+
+}
+
+@media only screen and (min-resolution: 192dpi) and (max-width: 767px){
+  .mobile-menu {
     background-color: rgba(12, 12, 12, 0.92);
+    background-image: linear-gradient(rgba(12, 12, 12, 0.92), rgba(12, 12, 12, 0.92)), url("../img/mobile-menu-bg/mobile-bg@2x.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
 
-    opacity: 0;
-    visibility: hidden;
-    transition: transition background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-}
-
-/* .mobile-menu .is-open {
-    opacity: 1;
-    visibility: visible;
-} */
-
-.mobile-menu-container{
-    position: relative;
-    display: flex;
-    flex-direction: column;
-     /* max-width: 320px;  */
-    padding: 20px 20px 40px 20px;
-    height: 100%;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-
-.mobile-menu-close-btn{
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    background-color: transparent;
-    line-height: 0;
-    border: none;
-    padding: 0;
-    stroke: #ffffff;
-    width: 17px;
-    height: 17px;
-    cursor: pointer;
-}
-
-
-.mobile-page-nav-menu{
-    margin-top: auto;
-    margin-bottom: auto;
-}
-
-.mobile-nav-menu{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 24px;
-    /* margin-top: 50px;
-    margin-bottom: 50px; */
+  }
 
 }
 
-.mobile-nav-link {
-  font-family: 'Gilroy', sans-serif;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.28571;
-  text-align: center;
-  color: #fbfbfb;
+
+@media (min-width: 768px) and (max-width: 1279px) {
+
+
+  .mobile-menu {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 999999999;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(12, 12, 12, 0.92);
+      background-image: linear-gradient(rgba(12, 12, 12, 0.92), rgba(12, 12, 12, 0.92)), url("../img/mobile-menu-bg/tablet-bg.jpg");
+      background-position: center;
+      background-repeat: no-repeat;
+      
+  
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 250ms linear, visibility 250ms linear;
+  
+    }
+  
+    .mobile-menu.is-open {
+      opacity: 1;
+      visibility: visible;
+    }
+  
+    .mobile-menu-container {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      /* max-width: 320px;  */
+      padding: 20px 20px 40px 20px;
+      height: 100%;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+  
+
+    .mobile-menu-close-btn {
+        position: absolute;
+        top: 26px;
+        right: 32px;
+        background-color: transparent;
+        line-height: 0;
+        border: none;
+        padding: 0;
+        stroke: #ffffff;
+        width: 40px;
+        height: 40px;
+        cursor: pointer;
+      }
+
+       .mobile-page-nav-menu {
+          margin-top: auto;
+          margin-bottom: auto;
+        }
+      
+        .mobile-nav-menu {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          gap: 32px;
+          /* margin-top: 50px; */
+          /*margin-bottom: 50px; */
+      
+        }
+
+                .mobile-nav-link {
+                  font-family: 'Gilroy', sans-serif;
+                  font-weight: 500;
+                  font-size: 14px;
+                  line-height: 1.28571;
+                  text-align: center;
+                  color: #fbfbfb;
+                }
+        
+                .mobile-socialmedia-list {
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  gap: 10px;
+                  padding-bottom: 40px;
+                }
+        
+                .mobile-socialmedia-list-link {
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  border-radius: 10px;
+                  fill: #fbfbfb;
+                  border: 1px solid rgba(251, 251, 251, 0.1);
+                  padding: 8px;
+                  width: 34px;
+                  height: 34px;
+                }
+
+
+
+
+
+
+
+  
+  
 }
 
-.mobile-socialmedia-list {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  padding-bottom: 40px;
+@media only screen and (min-resolution: 192dpi) and (max-width: 1279px) {
+
+  
+    .mobile-menu {
+
+        background-color: rgba(12, 12, 12, 0.92);
+        background-image: linear-gradient(rgba(12, 12, 12, 0.92), rgba(12, 12, 12, 0.92)), url("../img/mobile-menu-bg/tablet-bg@2x.jpg");
+        background-position: center; 
+        background-repeat: no-repeat;
+        background-size: cover;
+        
+
+      }
+  
 }
 
-.mobile-socialmedia-list-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 10px;
-  fill: #fbfbfb;
-  border: 1px solid rgba(251, 251, 251, 0.1);
-  padding: 8px;
-  width: 34px;
-  height: 34px;
+@media only screen and (min-width: 1280px) {
+  .mobile-menu{
+      display: none;
+
+  }
+ 
+  
 }
+
+
+
