--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,22 +5,22 @@
       <a class="header-logo" href="./index.html">watchcharm</a>
       <ul class="menu-list">
         <li class="menu-list-item">
-          <a class="menu-link current">Home</a>
+          <a class="menu-link current" href="./index.html">Home</a>
         </li>
         <li class="menu-list-item">
-          <a class="menu-link" href="about-us">About Us</a>
+          <a class="menu-link" href="#about-us-section">About Us</a>
         </li>
         <li class="menu-list-item">
-          <a class="menu-link" href="catalog">Catalog</a>
+          <a class="menu-link" href="#catalog">Catalog</a>
         </li>
         <li class="menu-list-item">
           <a class="menu-link" href="sale">Sale</a>
         </li>
         <li class="menu-list-item">
-          <a class="menu-link" href="reviews">Reviews</a>
+          <a class="menu-link" href="#reviews">Reviews</a>
         </li>
         <li class="menu-list-item">
-          <a class="menu-link" href="contact-us">Contact Us</a>
+          <a class="menu-link" href="#contact-us-section">Contact Us</a>
         </li>
       </ul>
     </nav>
@@ -31,7 +31,7 @@
           href="https://www.facebook.com/goITclub/"
           target="_blank"
         >
-          <svg class="social-list-icon" width="20px" height="20px">
+          <svg class="social-list-icon" width="20" height="20">
             <use href="../img/icons.svg#icon-facebook"></use>
           </svg>
         </a>
@@ -42,7 +42,7 @@
           href="https://www.instagram.com/goitclub/"
           target="_blank"
         >
-          <svg class="social-list-icon" width="20px" height="20px">
+          <svg class="social-list-icon" width="20" height="20">
             <use href="../img/icons.svg#icon-instagram"></use>
           </svg>
         </a>
@@ -53,7 +53,7 @@
           href="https://www.youtube.com/c/GoIT"
           target="_blank"
         >
-          <svg class="social-list-icon" width="20px" height="20px">
+          <svg class="social-list-icon" width="20" height="20">
             <use href="../img/icons.svg#icon-Frame-60"></use>
           </svg>
         </a>
@@ -69,7 +69,7 @@
 <!----------------------------THE END HEADER------------------------------------------------->
 
 <!----------------------------MOBILE MENU--------------------------------------------->
-<!-- <div class="mobile-menu is-open">
+<div class="mobile-menu">
   <div class="container mobile-menu-container">
     <buttton class="mobile-menu-close-btn" type="button">
       <svg class="mobile-menu-close-icon" width="34" height="34">
@@ -80,29 +80,28 @@
     <nav class="mobile-page-nav-menu">
       <ul class="mobile-nav-menu">
         <li class="mobile-nav-menu-item">
-          <a class="mobile-nav-link current" href="#">Home</a>
+          <a class="mobile-nav-link current" href="./index.html">Home</a>
         </li>
         <li class="mobile-nav-menu-item">
-          <a class="mobile-nav-link" href="about-us">About Us</a>
+          <a class="mobile-nav-link" href="#about-us-section">About Us</a>
         </li>
         <li class="mobile-nav-menu-item">
-          <a class="mobile-nav-link" href="catalog">Catalog</a>
+          <a class="mobile-nav-link" href="#catalog">Catalog</a>
         </li>
         <li class="mobile-nav-menu-item">
           <a class="mobile-nav-link" href="sale">Sale</a>
         </li>
         <li class="mobile-nav-menu-item">
-          <a class="mobile-nav-link" href="reviews">Reviews</a>
+          <a class="mobile-nav-link" href="#reviews">Reviews</a>
         </li>
         <li class="mobile-nav-menu-item">
-          <a class="mobile-nav-link" href="contact-us">Contact Us</a>
+          <a class="mobile-nav-link" href="#contact-us-section">Contact Us</a>
         </li>
       </ul>
     </nav>
     <ul class="mobile-socialmedia-list">
       <li class="mobile-socialmedia-list-item">
         <a
-          href="#"
           class="mobile-socialmedia-list-link"
           href="https://www.facebook.com/goITclub/"
           target="_blank"
@@ -114,7 +113,6 @@
       </li>
       <li class="mobile-socialmedia-list-item">
         <a
-          href="#"
           class="mobile-socialmedia-list-link"
           href="https://www.instagram.com/goitclub/"
           target="_blank"
@@ -126,7 +124,6 @@
       </li>
       <li class="mobile-socialmedia-list-item">
         <a
-          href="#"
           class="mobile-socialmedia-list-link"
           href="https://www.youtube.com/c/GoIT"
           target="_blank"
@@ -138,6 +135,6 @@
       </li>
     </ul>
   </div>
-</div> -->
+</div>
 
 <!----------------------THE END MOBILE MENU----------------------------->
